clusters/home/apps/system/monitoring/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "monitoring.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-internal.layertwo.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`monitoring.layertwo.dev`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
      #middlewares:
      #- name: default-headers-mediabox
